# terminal-mcp

./: .gitignore  README.md  pyproject.toml
src/terminal_mcp/: __init__.py  server.py  session_manager.py
src/terminal_mcp/terminal/: __init__.py  base.py  linux.py  macos.py  windows.py  wsl.py
